[gd_scene load_steps=5 format=2]

[ext_resource path="res://Rooms/realy_monster_room/money.png" type="Texture" id=1]
[ext_resource path="res://Rooms/realy_monster_room/coins.gd" type="Script" id=2]
[ext_resource path="res://Sounds/money.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 51.9052

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PoolVector2Array( 0.10524, -4.3667, -4.8501, -0.355236, -5.79398, 3.77422, -0.13073, 5.77995, 7.30228, 3.77422, 7.42027, -2.125 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.58051, 3.46048 )
scale = Vector2( 0.244369, 0.244369 )
texture = ExtResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
